test/expected/cli/shitbox_multicall.out
--- binary named ls acts as ls ---
ls
one.txt
two.txt
rc=0
--- unknown flag on a symlinked utility reports an error, not a crash ---
shit: 1:6: error: tail: Unknown flag '--bogus'.
     1 |  tail --bogus
       |       ^~~~~~~ here.
rc=1
--- a symlinked utility names the shit binary in its help ---
1
--- a symlinked utility reports the shit version on --version ---
1
